--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     </head>
     <body>
         <nav id="desktop-nav">
-            <div class="logo">Poojan M</div>
+            <div class="logo"><a href="./index.html">
+              <img class="logo" src="./assets/Asset 2.png" height="25vh">
+            </a>
+            </div>
             <div>
                 <ul class = "nav-links">
                     <li><a href="#home">Home</a></li>
@@ -20,7 +23,7 @@
             </div>
         </nav>
         <nav id="hamburger-nav">
-            <div class="logo">Poojan M</div>
+            <div class="logo"><img class="logo" src="./assets/Asset 2.png" height="25vh"></div>
             <div class="hamburger-menu">
                 <div class="hamburger-icon" onclick="toggleMenu()">
                     <span></span>
