--- a/index.html
+++ b/index.html
@@ -334,13 +334,13 @@
                   <div class="btn-container">
                     <button
                       class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
+                      onclick="location.href='https://poojan-mg.github.io/Instant_QR/'"
                     >
                       View
                     </button>
                     <button
                       class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/'"
+                      onclick="location.href='https://github.com/poojan-mg/Instant_QR'"
                     >
                       Code
                     </button>
